Fix design - wrap to container

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,7 +1,7 @@
 .about-wrapper{
     display: flex;
     align-items: center;
-    padding: 5% 3rem;
+    padding: 5% 0;
     background-color: #212332;
     .about-details{
         width: 50%;
